# bsqamera

./: CMakeLists.txt  README.md  build (1).yml  build.sh  camera_manager.cpp  camera_manager.hpp  config.hpp  copy-and-restart.sh  hooks.cpp  mod.template.json  presets.cpp  qpm.json  settings_menu.cpp
.github/workflows/: build.yml
include/: main.hpp  presets.hpp
src/: main.cpp
